downgrade to J17 for compatibility tests with SKLTP apps.
(cherry picked from commit 014c4f43e9fd9f62566b718355bda4d06dc2ba02)