@@ -70,8 +70,8 @@ class DefaultRoutingTest {
 
     List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_2, routingInfoList.getFirst().getAddress());
-    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
+    assertEquals(ADDRESS_2, routingInfoList.get(0).getAddress());
+    assertEquals(RIV20, routingInfoList.get(0).getRivProfile());
   }
 
   @Test
@@ -98,8 +98,8 @@ class DefaultRoutingTest {
 
     List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_1, routingInfoList.getFirst().getAddress());
-    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
+    assertEquals(ADDRESS_1, routingInfoList.get(0).getAddress());
+    assertEquals(RIV20, routingInfoList.get(0).getRivProfile());
   }
 
   @Test
@@ -114,8 +114,8 @@ class DefaultRoutingTest {
     List<RoutingInfo> routingInfoList = vagvalHandler
         .getRoutingInfo(NAMNRYMD_1, CHILD_OF_AUTHORIZED_RECEIVER_IN_HSA_TREE);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_2, routingInfoList.getFirst().getAddress());
-    assertEquals(RIV21, routingInfoList.getFirst().getRivProfile());
+    assertEquals(ADDRESS_2, routingInfoList.get(0).getAddress());
+    assertEquals(RIV21, routingInfoList.get(0).getRivProfile());
   }
 
 }
